--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,7 @@
 $gray: #e4e4e4;
 $white: #f9f9f9;
+$blue: #3B7EB4;
+$blue-lighter: #D9EDF7;
 @mixin centered($position) {
 	position: $position;
 	top: 50%;
