--- a/src/css/public.css
+++ b/src/css/public.css
@@ -3,8 +3,7 @@
 }
 
 body{
-	/* background-image: url("../img/cloud.v3.v1.jpg");
-	background-attachment: fixed;  */
+	background-color: #eee;
 }
 
 hr{
@@ -92,7 +91,7 @@ span#new-msg{
 /* top navigation END */
 
 .container.main{
-	margin-top: 60px;
+	margin-top: 80px;
 }
 
 nav{
@@ -105,37 +104,25 @@ h4{
 
 /* Box Begin */
 div.box{
-	background-color: #fff;
-	border: 1px solid #ccc;
+	background-color: #fafafa;
+	border: 1px solid #eee;
 	margin-bottom: 10px;
+	border-radius: 6px;
+	border: 1px solid #e4e4e4;
+	box-shadow: 0 0 10px #e4e4e4;
 }
 label.box-title{
-	color: #fff;
-	background-color: #428BCA;
-	padding: 5px;
+	color: #333;
+	background-color: #fafafa;
+	padding: 12px;
 	display: block;
-	font-size: 15px;
-	border-bottom: 1px solid #6FAFE8;
-	border-top: 1px solid #6FAFE8;
+	font-size: 14px;
+	font-weight: normal;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border-bottom: 1px solid #eee;
 }
-label.box-title.lb{
-	background-color: #6DA9E5;
-	border-color: #89C8E4;
-	font-size: 16px;
-	padding-left: 8px;
-}
-label.box-title.llb{
-	background-color: #96C7EF;
-	border-color: #BBE4F5;
-	font-size: 16px;
-	padding-left: 8px;
-}
-label.box-title.lllb{
-	background-color: #B2D8FA;
-	border-color: #BBE4F5;
-	font-size: 16px;
-	padding-left: 8px;
-}
+
 label.box-title + a, label.box-title + span{
 	float: right;
 	margin-top: -2.3em;
