--- a/src/css/public.css
+++ b/src/css/public.css
@@ -125,7 +125,7 @@ label.box-title{
 
 label.box-title + a, label.box-title + span{
 	float: right;
-	margin-top: -2.3em;
+	margin-top: -38px;
 	margin-right: 0.5em;
 }
 /* Box End */
